<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <com.tmobile.thememanager.widget.PersonalizePreference android:key="wallpaper" 
        android:title="@string/title_wallpaper"
        android:summary="@string/desc_wallpaper" />

    <com.tmobile.thememanager.widget.PersonalizeRingtonePreference
        android:key="ringtone"
        android:title="@string/title_ringtone"
        android:summary="@string/desc_ringtone"
        android:persistent="false"
        android:ringtoneType="ringtone" />

    <com.tmobile.thememanager.widget.PersonalizeRingtonePreference
        android:key="notification"
        android:title="@string/title_notification"
        android:summary="@string/desc_notification"
        android:persistent="false"
        android:ringtoneType="notification" />

    <com.tmobile.thememanager.widget.PersonalizePreference
        android:key="themes" 
        android:summary="@string/desc_themes"
        android:title="@string/title_themes" />
<!--
    <com.tmobile.thememanager.widget.PersonalizePreference
        android:key="shop" 
        android:summary="@string/desc_shop"
        android:title="@string/title_shop" />
-->
</PreferenceScreen>
