<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <com.tmobile.widget.HeaderTwinButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/generic_customize_header"
            android:headerText="@string/customize_theme"
            android:buttonText="@string/btn_simple_apply"
            android:button2Text="@string/btn_cancel" />

    <ImageView
        android:id="@+id/wpeffect_preview"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_weight="2"
	 />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
    />

</LinearLayout>


