<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <com.tmobile.widget.HeaderTwinButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/generic_customize_header"
        android:headerText="@string/customize_theme"
        android:buttonText="@string/btn_simple_apply"
        android:button2Text="@string/btn_cancel" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <com.tmobile.thememanager.widget.ThumbnailedBitmapView
            android:id="@+id/preview_wallpaper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@null"
            />

        <com.tmobile.thememanager.widget.PreviewContentStub
            android:id="@+id/preview_content_stub"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout="@layout/preview_content_stub"
            />

    </FrameLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_weight="1"
        android:minHeight="?android:attr/listPreferredItemHeight"
    />

</LinearLayout>
